--- a/History of spaced repetition/03.1986 First steps of SuperMemo.md
+++ b/History of spaced repetition/03.1986 First steps of SuperMemo.md
@@ -46,7 +46,7 @@ In my first year at the university, I had very little time and energy to spare. 
 
 > **Figure:** ZX Spectrum 8-bit microcomputer. SuperMemo could not be implemented on ZX Spectrumas the computer lacked disk storage. All programs and data had to be loaded in from a cassette tape
 >
-> **图片：**ZX Spectrum 8 位微机。由于计算机缺乏磁盘存储，无法在 ZX Spectrum上实现 SuperMemo。所有程序和数据都必须从盒式磁带中装入
+> **图：** ZX Spectrum 8 位微机。由于计算机缺乏磁盘存储，无法在 ZX Spectrum上实现 SuperMemo。所有程序和数据都必须从盒式磁带中装入
 
 ## The Army 
 
@@ -84,7 +84,7 @@ My whole family pulled in resources. My cousin, Dr Garbatowski, arranged a speci
 
 > **Figure:** Amstrad PC-1512 DD. My version had only one diskette drive. Operating system MS-DOS had to be loaded from one diskette, Turbo Pascal 3.0 from another diskette, SuperMemo from yet another. Until I had my first hard drive in 1991, my English collection had to be split into 3000-item portions. My 39,000 items had to be kept on 13 diskettes. I had many more for other areas of knowledge. On Jan 21, 1997, SuperMemo World has tracked down that original PC and bought it back from its owner: Jarek Kantecki. The PC was fully functional for the whole decade. It is now buried somewhere in dusty archives of the company. Perhaps we will publish its picture at some point. The presented picture comes from Wikipedia
 >
-> **图片：**Amstrad PC-1512 DD。我的版本只有一个磁盘驱动器。操作系统 MS-DOS 必须从一个磁盘加载，Turbo Pascal 3.0 必须从另一个磁盘加载，SuperMemo 必须从另一个磁盘加载。直到 1991 年我有了自己的第一个硬盘，我的英语集合不得不分成 3000 个部分。我的 39000 条项目被保存在13个磁盘上。我有很多其他领域的知识。1997 年 1 月 21 日，SuperMemo World 找到了那台最初的个人电脑，并从它的主人 Jarek Kantecki 手中买了回来。这台个人电脑在整整十年里功能齐全。现在它被埋在公司尘封的档案中。也许我们会在某个时候发布它的照片。图片来自维基百科
+> **图：** Amstrad PC-1512 DD。我的版本只有一个磁盘驱动器。操作系统 MS-DOS 必须从一个磁盘加载，Turbo Pascal 3.0 必须从另一个磁盘加载，SuperMemo 必须从另一个磁盘加载。直到 1991 年我有了自己的第一个硬盘，我的英语集合不得不分成 3000 个部分。我的 39000 条项目被保存在13个磁盘上。我有很多其他领域的知识。1997 年 1 月 21 日，SuperMemo World 找到了那台最初的个人电脑，并从它的主人 Jarek Kantecki 手中买了回来。这台个人电脑在整整十年里功能齐全。现在它被埋在公司尘封的档案中。也许我们会在某个时候发布它的照片。图片来自维基百科
 
 My German Amstrad-Schneider PC 1512 was ordered from a Polish company Olech. Olech was to deliver it in June 1987. They did it in September. This cost me the whole summer of stress. Some time later, [Krzysztof Biedalak](https://supermemo.guru/wiki/Krzysztof_Biedalak) ordered a PC from a Dutch company Colgar and never got a PC or money back. If this happened to me, I would have lost my trust in humanity. This would have killed SuperMemo. This might have killed my passion for computers. Biedalak, on the other hand, stoically got back to hard work and earned his money back and more. That would be one of the key personality differences between me and Biedalak. [Stress resilience](https://supermemo.guru/wiki/Stress_resilience) should be one of the components of development. I developed my stress resilience late with self-discipline training (e.g. [winter swimming](https://supermemo.guru/wiki/Winter_swimming), marathons, etc.). Having lost his money, Biedalak did not complain. He got it back in no time. Soon I was envious of his new shiny PC. His hard work and determination in achieving goals was always a key to the company's survival. It was his own privately earned money that helped [SuperMemo World](https://supermemo.guru/wiki/SuperMemo_World) survive the first months. He did not get a gift from his parents. He could always do things on his own.
 
@@ -110,7 +110,7 @@ On Mar 23, 1986, I managed to write the same simulation program in Pascal which 
 
 > **Figure:** SuperMemo makes it possible to simulate the course of learning over 15 years using real data collected during repetitions.
 >
-> **图片：**SuperMemo 可以使用在重复过程中收集的真实数据模拟 15 年以上的学习过程
+> **图：** SuperMemo 可以使用在重复过程中收集的真实数据模拟 15 年以上的学习过程
 
 Some of the results of that simulation are valid today. Below I present some of the original findings. Some might have been amended in [1990](https://supermemo.guru/wiki/Optimization_of_learning) or [1994](https://supermemo.guru/wiki/Economics_of_learning).
 该模拟的一些结果今天仍然有效。下面我将介绍一些最初的发现。有些可能在 [1990](https://supermemo.guru/wiki/Optimization_of_learning) 或 [1994](https://supermemo.guru/wiki/Economics_of_learning) 中进行了修改。
@@ -127,7 +127,7 @@ The learning curve obtained by using the model of a [spaced repetition](https://
 
 > **Figure:** Learning curve for a generic material, forgetting index equal to 10%, and daily working time of 1 minute.
 >
-> **图片：**一般材料的学习曲线，遗忘系数为 10%，每天学习时间为 1 分钟。
+> **图：** 一般材料的学习曲线，遗忘系数为 10%，每天学习时间为 1 分钟。
 
 ### New items take 5% of the time 
 
@@ -200,7 +200,7 @@ As the time necessary for repetitions of a single item is almost independent of 
 
 > **Figure:** Workload, in minutes per day, in a generic 3000-item learning material, for the forgetting index equal to 10%.
 >
-> **图片：**学习负荷，以分钟为单位，在一般的 3000 项学习材料，遗忘系数等于 10%。
+> **图：** 学习负荷，以分钟为单位，在一般的 3000 项学习材料，遗忘系数等于 10%。
 
 ### Optimum forgetting index 
 
@@ -218,7 +218,7 @@ For the forgetting index greater than 20%, the positive effect of long intervals
 
 > **Figure:** Dependence of the knowledge acquisition rate on the forgetting index.
 >
-> **图片：**知识习得率与遗忘系数的关系
+> **图：** 知识习得率与遗忘系数的关系
 
 When the [forgetting index](https://supermemo.guru/wiki/Forgetting_index) drops below 5%, the repetition workload increases rapidly (see the figure above). The recommended value of the forgetting index used in the practice of learning is 6-14%.
 
@@ -228,7 +228,7 @@ When the [forgetting index](https://supermemo.guru/wiki/Forgetting_index) drops 
 
 > **Figure:** Trade-off between the knowledge retention (forgetting index) and the workload (number of repetitions of an average item in 10,000 days).
 >
-> **图片：**知识保留(遗忘系数)与学习负荷(平均 10000 天内重复一项的次数)之间的权衡
+> **图：** 知识保留(遗忘系数)与学习负荷(平均 10000 天内重复一项的次数)之间的权衡
 
 In later years, the value of the optimum [forgetting index](https://supermemo.guru/wiki/Forgetting_index) was found to differ depending on the tools used (e.g. [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17)).
 
@@ -242,7 +242,7 @@ For example, using the model of intermittent learning, I argued that the optimum
 
 > ***Fig. 11.2. Workload-retention trade-off:*** *On one hand, if forgetting index is lower than 5%, then the workload increases dramatically without substantially affecting the retention. On the other, above forgetting index of 10%, workload hardly changes while retention steadily falls down. Obviously, the workload-retention trade-off corresponds directly to the compromise between the acquisition rate and retention. By increasing the availability of time X times (by decreasing the workload X times), one can increase the acquisition rate X times (compare Chapter 5). Note, that the relation of the forgetting index and retention in this model is almost linear.* (source: [Optimization of learning](https://supermemo.guru/wiki/Optimization_of_learning): *Model of intermittent learning*, [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak), 1990)
 >
-> **图11.2.学习负荷-保留率权衡：**一方面，如果遗忘系数低于 5%，那么学习负荷就会显著增加，而对记忆没有显著影响。另一方面，超过 10% 的遗忘系数，学习负荷几乎没有变化，而保留率却在稳步下降。显然，学习负荷-保留率权衡直接对应了习得率和保持率之间的折衷。通过增加 X 倍的时间可用性(减少学习负荷 X 倍)，就可以增加习得率 X 倍(比较第 5 章)。注意，该模型中遗忘系数与保留率的关系几乎是线性的。(来源：[优化学习](https://supermemo.guru/wiki/Optimization_of_learning)：*间歇学习模型*，[Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak)， 1990)
+> **图 11.2.学习负荷-保留率权衡：** 一方面，如果遗忘系数低于 5%，那么学习负荷就会显著增加，而对记忆没有显著影响。另一方面，超过 10% 的遗忘系数，学习负荷几乎没有变化，而保留率却在稳步下降。显然，学习负荷-保留率权衡直接对应了习得率和保持率之间的折衷。通过增加 X 倍的时间可用性(减少学习负荷 X 倍)，就可以增加习得率 X 倍(比较第 5 章)。注意，该模型中遗忘系数与保留率的关系几乎是线性的。(来源：[优化学习](https://supermemo.guru/wiki/Optimization_of_learning)：*间歇学习模型*，[Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak)， 1990)
 
 ### Memory capacity 
 
