--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -4,7 +4,7 @@
 
 [Two-component model of long-term memory](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory) lays at the foundation of [SuperMemo](https://supermemo.guru/wiki/SuperMemo), and is expressed explicitly in [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). It differentiates between how [stable](https://supermemo.guru/wiki/Stability) knowledge is in long term memory storage, and how [easy it is to retrieve](https://supermemo.guru/wiki/Retrievability). This remains a little known and quintessential fact of the theory of learning that one can be fluent and still remember poorly.
 
-[长期记忆的双组分模型](https://supermemo.guru/wiki/two component_model_of_long-term_memory)是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的基础，并在 [SM-17 算法](https://supermemo.guru/wiki/Algorithm_SM-17)中明确表示。它区分了知识在长期记忆存储中的稳定性和提取的难易程度。这仍然是学习理论中一个鲜为人知的典型事实，即一个人可以流利，但记忆力仍然很差。
+[长期记忆的双组分模型](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory)是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的基础，并在 [SM-17 算法](https://supermemo.guru/wiki/Algorithm_SM-17)中明确表示。它区分了知识在长期记忆存储中的稳定性和提取的难易程度。这仍然是学习理论中一个鲜为人知的典型事实，即一个人可以流利，但记忆力仍然很差。
 
 Fluency is a poor measure of learning in the long term
 
@@ -48,7 +48,7 @@ When I first presented my ideas to my teacher Dr Katulski on Feb 19, 1988, he wa
 
 In my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis) (1990), I added a slightly more formal proof of the existence of the two components (see [next](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)#Proof)). That part of my thesis remained unnoticed.
 
-在我的[硕士论文](https://supermemo.guru/wiki/Master's _thesis)(1990)中，我添加了一个稍微正式的证明，证明这两个组件的存在(参见[下一节](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)# proof))。我论文的那一部分没有引起注意。
+在我的[硕士论文](https://supermemo.guru/wiki/Master's_Thesis)(1990)中，我添加了一个稍微正式的证明，证明这两个组件的存在(参见[下一节](https://supermemo.guru/wiki/History_of_spaced_repetition_(print)#Proof))。我论文的那一部分没有引起注意。
 
 In 1994, J. Kowalski [wrote in Enter](http://www.super-memory.com/articles/kowal.htm), Poland:
 
@@ -98,7 +98,7 @@ A graph of actual changes in the value of the two components of memory provides 
 
 > **Figure:** Changes in memory status over time for an exemplary piece of knowledge. The horizontal axis represents time spanning the entire repetition history. The top panel shows retrievability (tenth power, $R^{10}$, for easier analysis). Retrievability grid in gray is labelled by R=99%, R=98%, etc. The middle panel displays optimum intervals in navy. Repetition dates are marked by blue vertical lines and labelled in aqua. The end of the optimum interval where R crosses 90% line is marked by red vertical lines (only if intervals are longer than optimum intervals). The bottom panel visualizes stability (presented as $\ln(S)/\ln(days)$ for easier analysis). The graph shows that retrievability drops fast (exponentially) after early repetitions when stability is low, however, it only drops from 100% to 94% in long 10 years after the 7th review. All values are derived from an actual repetition history and the three component model of memory.
 >
-> **图片：**记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可提取性(十次幂，$R^{10}$，便于分析)。灰色网格的可提取性指标分别为 R=99%、R=98% 等。中间深蓝色的面板显示的最佳间隔。重复日期用蓝色竖线标记，并以浅蓝绿色标记。当 R 越过 90% 线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以 $\ln(S)/\ln(days)$ 表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可提取性下降较快(指数级)，但在第 7 次复习后的 10 年时间里，可提取性仅从100%下降到 94%。所有的值都来自一个实际的重复历史和记忆的三组分模型。
+> **图：** 记忆状态随着时间的推移而发生变化。横轴表示跨越整个重复历史的时间。顶部面板显示可提取性(十次幂，$R^{10}$，便于分析)。灰色网格的可提取性指标分别为 R=99%、R=98% 等。中间深蓝色的面板显示的最佳间隔。重复日期用蓝色竖线标记，并以浅蓝绿色标记。当 R 越过 90% 线时，最佳区间的末端用红色竖线表示(仅当区间大于最佳区间时)。下面板显示稳定性(以 $\ln(S)/\ln(days)$ 表示，便于分析)。从图中可以看出，当稳定性较低时，早期重复后的可提取性下降较快(指数级)，但在第 7 次复习后的 10 年时间里，可提取性仅从100%下降到 94%。所有的值都来自一个实际的重复历史和记忆的三组分模型。
 
 Due to the fact that a real-life application of [SuperMemo](https://supermemo.guru/wiki/SuperMemo) requires tackling learning material of varying difficulty, the third variable involved in the model is [item difficulty](https://supermemo.guru/wiki/Item_difficulty) (D). Some of the implications of item difficulty have also been discussed in [this article](https://supermemo.guru/wiki/History_of_spaced_repetition). In particular, the impact of composite memories with subcomponents of different memory stability (S).
 
@@ -216,7 +216,7 @@ The actual proof from my [Master's Thesis](https://supermemo.guru/wiki/Optimizat
 >
 > > **Figure:** In my Master's Thesis titled "Optimization of learning" (1990), I presented some hypothetical concepts that might underly the process of optimal learning based on spaced repetition. (A) Molecular phenomena (B) Quantitative changes in the synapse. Those ideas are a bit dated today, but the serrated curves representing memory retrievability came to be widely known in popular publications on spaced repetition. They are usually wrongly attributed to Hermann Ebbinghaus
 > >
-> > **图片：**在我的硕士论文“优化学习”(1990)中，我提出了一些假设概念，这些概念可能是基于间隔重复的优化学习过程的基础。(A)分子现象 (B)突触的数量变化。这些观点在今天看来有些过时，但代表记忆可提取性的锯齿形曲线在有关间隔重复的流行出版物中得到了广泛的认识。它们通常被错误地归因于赫尔曼•艾宾浩斯
+> > **图：** 在我的硕士论文“优化学习”(1990)中，我提出了一些假设概念，这些概念可能是基于间隔重复的优化学习过程的基础。(A)分子现象 (B)突触的数量变化。这些观点在今天看来有些过时，但代表记忆可提取性的锯齿形曲线在有关间隔重复的流行出版物中得到了广泛的认识。它们通常被错误地归因于赫尔曼•艾宾浩斯
 >
 
 ## Proof by Murakowski
