下载网络图片到本地

--- a/History of spaced repetition/02.1985 Birth of SuperMemo.md
+++ b/History of spaced repetition/02.1985 Birth of SuperMemo.md
@@ -18,7 +18,7 @@ In 1982, I paid more attention to what most students discover sooner or later: t
 
 1982 年，我更加关注大多数学生迟早会发现的东西：考试效果。我开始形成主动回忆的知识。我会把问题写在一页的左边，答案写在右边的一栏里：
 
-![](https://supermemo.guru/images/a/a2/Polish-English_word_pairs_that_helped_formulate_SuperMemo_%28Wozniak_1982%29.jpg)
+![](../.gitbook/assets/Polish-English_word_pairs_that_helped_formulate_SuperMemo_(Wozniak_1982).jpg)
 
 > **Figure:** In 1982, my learning materials were organized into columns: questions and answers, for active recall. The picture shows my Polish-English word pair database (June 1982)
 >
@@ -32,7 +32,7 @@ In the years 1982-1983, I kept expanding my "fast assimilation" knowledge in the
 
 在 1982 - 1983 年期间，我不断扩大我在生物化学和英语领域的“快速吸收”知识。我会不时地回顾我的资料页，以减少遗忘。我的记忆力提高了，但我再次碰壁只是时间问题。我拥有的页面越多，复习的频率越低，记忆遗漏的问题就越明显。下面是一个重复历史的例子：
 
-[![Intermittent learning started on June 3, 1982](https://supermemo.guru/images/thumb/8/87/Repetition_history_notes_used_in_investigating_recall_%28Wozniak_1982%29.jpg/300px-Repetition_history_notes_used_in_investigating_recall_%28Wozniak_1982%29.jpg)](https://supermemo.guru/wiki/File:Repetition_history_notes_used_in_investigating_recall_(Wozniak_1982).jpg)
+[![Intermittent learning started on June 3, 1982](../.gitbook/assets/300px-Repetition_history_notes_used_in_investigating_recall_(Wozniak_1982).jpg)](https://supermemo.guru/wiki/File:Repetition_history_notes_used_in_investigating_recall_(Wozniak_1982).jpg)
 
 > **Figure:** **Repetition history** is the record of review with dates and scores. In this example, 8 repetitions were executed in the years 1982-1985. The page of 38 word-pairs registered 0-7 memory lapses per repetition. This intermittent review was replaced with the SuperMemo method in 1985
 >
@@ -184,7 +184,7 @@ On July 31, 1985, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) was born. I
 
 1985 年 7 月 31 日，Supermemo 诞生了。我从我的间隔重复实验中得到的大部分数据都是可用的。作为一个热心的修行者，我没有等到实验结束。我想尽快开始学习。在人类生物学中建立了大量的笔记之后，我开始将这些笔记转换为特殊记忆测试格式(SMT 是 Supermemo 的原始名称，并且间隔重复)。
 
-[![Human biology in the Special Memorization Test format started on Jul 31, 1985 (i.e. the birth of SuperMemo)](https://supermemo.guru/images/thumb/3/39/SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg/800px-SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg)](https://supermemo.guru/wiki/File:SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg)
+[![Human biology in the Special Memorization Test format started on Jul 31, 1985 (../.gitbook/assets/800px-SuperMemo_Memorization_Test_Human_biology_1985.07.31-1577343366871.jpg)](https://supermemo.guru/images/thumb/3/39/SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg/800px-SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg)](https://supermemo.guru/wiki/File:SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg)
 
 > **Figure:** Human biology in the Special Memorization Test format started on Jul 31, 1985 (i.e. the birthday of SuperMemo)
 >
