--- a/History of spaced repetition/03.1986 First steps of SuperMemo.md
+++ b/History of spaced repetition/03.1986 First steps of SuperMemo.md
@@ -42,7 +42,7 @@ In my first year at the university, I had very little time and energy to spare. 
 
 在大学的第一年，我几乎没有多余的时间和精力。我的大部分时间都花在买第一台电脑上：ZX Spectrum(1986 年 1 月)。1985 年秋天的一天，我从一个朋友那里借了一台，我完全被它的魔力迷住了。早在我得到这个玩具之前，我就开始“在纸上”编程了。我的第一个程序是“计划一天”。它是 Plan 的前身。1986 年 1 月 4 日，当我第一次打开 ZX Spectrum时，程序已经准备好输入计算机了。从那天起，我的大部分时间都花在编程上，不去上学，甚至在课堂上也把程序写在纸上。
 
-[![ZX Spectrum8-bit personal home computer](https://supermemo.guru/images/thumb/b/ba/ZX_Spectrum.jpg/800px-ZX_Spectrum.jpg)](https://supermemo.guru/wiki/File:ZX_Spectrum.jpg)
+[![ZX Spectrum8-bit personal home computer](../.gitbook/assets/800px-ZX_Spectrum.jpg)](https://supermemo.guru/wiki/File:ZX_Spectrum.jpg)
 
 > **Figure:** ZX Spectrum 8-bit microcomputer. SuperMemo could not be implemented on ZX Spectrumas the computer lacked disk storage. All programs and data had to be loaded in from a cassette tape
 >
@@ -80,7 +80,7 @@ My whole family pulled in resources. My cousin, Dr Garbatowski, arranged a speci
 
 我们全家都动用了资源。我的堂兄 Garbatowski 博士为德国马克转账安排了一个特殊的外汇账户。由于某种难以解释的奇迹，我能够买得起 1000 德国马克 的 Amstrad 个人电脑 1512。这台电脑并不像媒体曾经报道的那样是走私来的。我失败的走私行动是在两年前为了获得 ZX Spectrum 而进行的。我在 Zaire 的朋友打算在西柏林给我买。最后，我在波兰以很好的价格从一个人那里买了二手的 ZX Spectrum，他认为自己卖的“只是一个键盘”。
 
-[![Amstrad PC-1512 DD](https://supermemo.guru/images/thumb/d/de/Schneider_Amstrad_PC_1512_DD.png/537px-Schneider_Amstrad_PC_1512_DD.png)](https://supermemo.guru/wiki/File:Schneider_Amstrad_PC_1512_DD.png)
+[![Amstrad PC-1512 DD](../.gitbook/assets/537px-Schneider_Amstrad_PC_1512_DD.png)](https://supermemo.guru/wiki/File:Schneider_Amstrad_PC_1512_DD.png)
 
 > **Figure:** Amstrad PC-1512 DD. My version had only one diskette drive. Operating system MS-DOS had to be loaded from one diskette, Turbo Pascal 3.0 from another diskette, SuperMemo from yet another. Until I had my first hard drive in 1991, my English collection had to be split into 3000-item portions. My 39,000 items had to be kept on 13 diskettes. I had many more for other areas of knowledge. On Jan 21, 1997, SuperMemo World has tracked down that original PC and bought it back from its owner: Jarek Kantecki. The PC was fully functional for the whole decade. It is now buried somewhere in dusty archives of the company. Perhaps we will publish its picture at some point. The presented picture comes from Wikipedia
 >
@@ -106,7 +106,7 @@ On Mar 23, 1986, I managed to write the same simulation program in Pascal which 
 
 1986 年 3 月 23 日，我成功地用 Pascal 编写了同样的仿真程序，Pascal 是一种编译语言。这一次，我可以在 70 分钟内运行 80 年的模拟。我得到了同样的结果。今天，SuperMemo 仍然可以运行类似的模拟。同样的过程只需要一两秒钟。
 
-[![SuperMemo makes it possible to simulate the course of learning over 15 years using real data collected during repetitions](https://supermemo.guru/images/thumb/a/ad/Learning_process_simulation.jpg/600px-Learning_process_simulation.jpg)](https://supermemo.guru/wiki/File:Learning_process_simulation.jpg)
+[![SuperMemo makes it possible to simulate the course of learning over 15 years using real data collected during repetitions](../.gitbook/assets/600px-Learning_process_simulation.jpg)](https://supermemo.guru/wiki/File:Learning_process_simulation.jpg)
 
 > **Figure:** SuperMemo makes it possible to simulate the course of learning over 15 years using real data collected during repetitions.
 >
@@ -123,7 +123,7 @@ The learning curve obtained by using the model of a [spaced repetition](https://
 
 使用间隔重复模型得到的学习曲线除初始阶段外，几乎是线性的：
 
-[![Learning curve for a generic material, forgetting index equal to 10%, and daily working time of 1 minute](https://supermemo.guru/images/3/30/Linear_learning_curve.gif)](https://supermemo.guru/wiki/File:Linear_learning_curve.gif)
+[![Learning curve for a generic material, forgetting index equal to 10%, and daily working time of 1 minute](../.gitbook/assets/Linear_learning_curve.gif)](https://supermemo.guru/wiki/File:Linear_learning_curve.gif)
 
 > **Figure:** Learning curve for a generic material, forgetting index equal to 10%, and daily working time of 1 minute.
 >
@@ -196,7 +196,7 @@ As the time necessary for repetitions of a single item is almost independent of 
 
 由于单个项目的重复所需要的时间几乎与学习材料的总长度无关，所以可以用上面的公式来近似任何长度的学习材料的学习负荷。例如，第一年 3000 个项目集合的总将是 3000/500*1+3000/30000=6.1 (分钟/天)。
 
-[![Workload, in minutes per day, in a generic 3000-item learning material, for the forgetting index equal to 10%](https://supermemo.guru/images/4/41/Workload.gif)](https://supermemo.guru/wiki/File:Workload.gif)
+[![Workload, in minutes per day, in a generic 3000-item learning material, for the forgetting index equal to 10%](../.gitbook/assets/Workload.gif)](https://supermemo.guru/wiki/File:Workload.gif)
 
 > **Figure:** Workload, in minutes per day, in a generic 3000-item learning material, for the forgetting index equal to 10%.
 >
@@ -214,7 +214,7 @@ For the forgetting index greater than 20%, the positive effect of long intervals
 
 对于遗忘系数大于 20% 的情况，[间隔效应](https://supermemo.guru/wiki/Spacing_effect)所产生的长时间间隔对记忆的积极影响被越来越多的遗忘项所抵消。
 
-[![Dependence of the knowledge acquisition rate on the forgetting index](https://supermemo.guru/images/e/eb/Knowledge_acquisition_rate_vs_forgetting_index.gif)](https://supermemo.guru/wiki/File:Knowledge_acquisition_rate_vs_forgetting_index.gif)
+[![Dependence of the knowledge acquisition rate on the forgetting index](../.gitbook/assets/Knowledge_acquisition_rate_vs_forgetting_index.gif)](https://supermemo.guru/wiki/File:Knowledge_acquisition_rate_vs_forgetting_index.gif)
 
 > **Figure:** Dependence of the knowledge acquisition rate on the forgetting index.
 >
@@ -224,7 +224,7 @@ When the [forgetting index](https://supermemo.guru/wiki/Forgetting_index) drops 
 
 当[遗忘系数](https://supermemo.guru/wiki/Forgetting_index)降到 5% 以下时，重复学习负荷会迅速增加(见上图)。在学习实践中，遗忘系数的推荐值为 6-14%。
 
-[![Trade-off between the knowledge retention (forgetting index) and the workload (number of repetitions of an average item in 10,000 days)](https://supermemo.guru/images/5/5a/Knowledge_retention_vs_workload.gif)](https://supermemo.guru/wiki/File:Knowledge_retention_vs_workload.gif)
+[![Trade-off between the knowledge retention (../.gitbook/assets/Knowledge_retention_vs_workload.gif) and the workload (number of repetitions of an average item in 10,000 days)](https://supermemo.guru/images/5/5a/Knowledge_retention_vs_workload.gif)](https://supermemo.guru/wiki/File:Knowledge_retention_vs_workload.gif)
 
 > **Figure:** Trade-off between the knowledge retention (forgetting index) and the workload (number of repetitions of an average item in 10,000 days).
 >
@@ -238,7 +238,7 @@ For example, using the model of intermittent learning, I argued that the optimum
 
 例如，使用间歇学习模型，我认为最优值可能在 5-10% 范围内:
 
-[![Workload-retention trade off derived from the model of intermittent learning](https://supermemo.guru/images/thumb/1/1e/Workload-retention_tradeoff.jpg/600px-Workload-retention_tradeoff.jpg)](https://supermemo.guru/wiki/File:Workload-retention_tradeoff.jpg)
+[![Workload-retention trade off derived from the model of intermittent learning](../.gitbook/assets/600px-Workload-retention_tradeoff.jpg)](https://supermemo.guru/wiki/File:Workload-retention_tradeoff.jpg)
 
 > ***Fig. 11.2. Workload-retention trade-off:*** *On one hand, if forgetting index is lower than 5%, then the workload increases dramatically without substantially affecting the retention. On the other, above forgetting index of 10%, workload hardly changes while retention steadily falls down. Obviously, the workload-retention trade-off corresponds directly to the compromise between the acquisition rate and retention. By increasing the availability of time X times (by decreasing the workload X times), one can increase the acquisition rate X times (compare Chapter 5). Note, that the relation of the forgetting index and retention in this model is almost linear.* (source: [Optimization of learning](https://supermemo.guru/wiki/Optimization_of_learning): *Model of intermittent learning*, [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak), 1990)
 >
