--- a/History of spaced repetition/02.1985 Birth of SuperMemo.md
+++ b/History of spaced repetition/02.1985 Birth of SuperMemo.md
@@ -32,7 +32,7 @@ In the years 1982-1983, I kept expanding my "fast assimilation" knowledge in the
 
 在 1982 - 1983 年期间，我不断扩大我在生物化学和英语领域的“快速吸收”知识。我会不时地回顾我的资料页，以减少遗忘。我的记忆力提高了，但我再次碰壁只是时间问题。我拥有的页面越多，复习的频率越低，记忆遗漏的问题就越明显。下面是一个重复历史的例子：
 
-[![Intermittent learning started on June 3, 1982](../.gitbook/assets/300px-Repetition_history_notes_used_in_investigating_recall_(Wozniak_1982).jpg)](https://supermemo.guru/wiki/File:Repetition_history_notes_used_in_investigating_recall_(Wozniak_1982).jpg)
+![Intermittent learning started on June 3, 1982](../.gitbook/assets/300px-Repetition_history_notes_used_in_investigating_recall_(Wozniak_1982).jpg)
 
 > **Figure:** **Repetition history** is the record of review with dates and scores. In this example, 8 repetitions were executed in the years 1982-1985. The page of 38 word-pairs registered 0-7 memory lapses per repetition. This intermittent review was replaced with the SuperMemo method in 1985
 >
