--- a/History of spaced repetition/03.1986 First steps of SuperMemo.md
+++ b/History of spaced repetition/03.1986 First steps of SuperMemo.md
@@ -42,7 +42,7 @@ In my first year at the university, I had very little time and energy to spare. 
 
 在大学的第一年，我几乎没有多余的时间和精力。我的大部分时间都花在买第一台电脑上：ZX Spectrum(1986 年 1 月)。1985 年秋天的一天，我从一个朋友那里借了一台，我完全被它的魔力迷住了。早在我得到这个玩具之前，我就开始“在纸上”编程了。我的第一个程序是“计划一天”。它是 Plan 的前身。1986 年 1 月 4 日，当我第一次打开 ZX Spectrum时，程序已经准备好输入计算机了。从那天起，我的大部分时间都花在编程上，不去上学，甚至在课堂上也把程序写在纸上。
 
-[![ZX Spectrum8-bit personal home computer](../.gitbook/assets/800px-ZX_Spectrum.jpg)](https://supermemo.guru/wiki/File:ZX_Spectrum.jpg)
+![ZX Spectrum8-bit personal home computer](../.gitbook/assets/800px-ZX_Spectrum.jpg)
 
 > **Figure:** ZX Spectrum 8-bit microcomputer. SuperMemo could not be implemented on ZX Spectrumas the computer lacked disk storage. All programs and data had to be loaded in from a cassette tape
 >
