--- a/History of spaced repetition/02.1985 Birth of SuperMemo.md
+++ b/History of spaced repetition/02.1985 Birth of SuperMemo.md
@@ -42,7 +42,7 @@ Between June 1982 and December 1984, my English-Polish word-pairs notebook grew 
 
 1982 年 6 月到 1984 年 12 月之间，我的英语 - 波兰语单词对笔记本增加到 79 页，看起来像这样：
 
-[![English-Polish word pairs (Wozniak 1982).jpg](https://supermemo.guru/images/thumb/a/a9/English-Polish_word_pairs_%28Wozniak_1982%29.jpg/550px-English-Polish_word_pairs_%28Wozniak_1982%29.jpg)](https://supermemo.guru/wiki/File:English-Polish_word_pairs_(Wozniak_1982).jpg)
+![](../.gitbook/assets/550px-English-Polish_word_pairs_(Wozniak_1982).jpg)
 
 > **Figure:** A typical page from my English-Polish words notebook started in June 1982. Word pairs would be listed on the left. Review history would be recorded on the right. Recall errors would be marked as dots in the middle
 >
@@ -184,7 +184,7 @@ On July 31, 1985, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) was born. I
 
 1985 年 7 月 31 日，Supermemo 诞生了。我从我的间隔重复实验中得到的大部分数据都是可用的。作为一个热心的修行者，我没有等到实验结束。我想尽快开始学习。在人类生物学中建立了大量的笔记之后，我开始将这些笔记转换为特殊记忆测试格式(SMT 是 Supermemo 的原始名称，并且间隔重复)。
 
-[![Human biology in the Special Memorization Test format started on Jul 31, 1985 (../.gitbook/assets/800px-SuperMemo_Memorization_Test_Human_biology_1985.07.31-1577343366871.jpg)](https://supermemo.guru/images/thumb/3/39/SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg/800px-SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg)](https://supermemo.guru/wiki/File:SuperMemo_Memorization_Test_Human_biology_1985.07.31.jpg)
+![](../.gitbook/assets/800px-SuperMemo_Memorization_Test_Human_biology_1985.07.31-1577343366871.jpg)
 
 > **Figure:** Human biology in the Special Memorization Test format started on Jul 31, 1985 (i.e. the birthday of SuperMemo)
 >
