--- a/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
+++ b/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
@@ -22,7 +22,7 @@ On Sep 8, 1987, my first PC arrived from Germany (Amstrad PC 1512). My enthusias
 
 1987 年 9 月 8 日，我的第一台个人电脑从德国运来(Amstrad PC 1512)。我的热情无与伦比！我睡不着。我工作了一整夜。我计划编写的第一个程序是用于数学近似。SuperMemo 是第二个。
 
-[![Amstrad PC-1512 DD](https://supermemo.guru/images/thumb/d/de/Schneider_Amstrad_PC_1512_DD.png/200px-Schneider_Amstrad_PC_1512_DD.png)](https://supermemo.guru/wiki/File:Schneider_Amstrad_PC_1512_DD.png)
+[![Amstrad PC-1512 DD](../.gitbook/assets/200px-Schneider_Amstrad_PC_1512_DD.png)](https://supermemo.guru/wiki/File:Schneider_Amstrad_PC_1512_DD.png)
 
 > **Figure:** Amstrad PC-1512 DD. My version had only one diskette drive. Operating system MS-DOS had to be loaded from one diskette, Turbo Pascal 3.0 from another diskette, SuperMemo from yet another. Until I had my first hard drive in 1991, my English collection had to be split into 3000-item portions. My 39,000 items had to be kept on 13 diskettes. I had many more for other areas of knowledge. On Jan 21, 1997, SuperMemo World has tracked down that original PC and bought it back from its owner: Jarek Kantecki. The PC was fully functional for the whole decade. It is now buried somewhere in dusty archives of the company. Perhaps we will publish its picture at some point. The presented picture comes from Wikipedia
 >
@@ -103,7 +103,7 @@ By Dec 23, 1987, my combined paper and [computer databases](https://supermemo.gu
 
 到了 1987 年 12 月 23 日，我的论文和[计算机数据库](https://supermemo.guru/wiki/Collection)包含了 3795 个关于人类生物学的问题(其中近 10% 已经存储在我新的 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 程序数据库中)。遗憾的是，那天我不得不从 SuperMemo 中删除存储完整重复历史的可能性。在 360K 的磁盘上没有足够的空间。间隔重复研究需要再等几年。直到 1996 年，SuperMemo 才重新开始收集重复次数的完整记录。
 
-[![SuperMemo 1.0 for DOS (1987)](https://supermemo.guru/images/thumb/e/ea/SuperMemo_1_for_DOS_%28in_black_and_white%29.jpg/800px-SuperMemo_1_for_DOS_%28in_black_and_white%29.jpg)](https://supermemo.guru/wiki/File:SuperMemo_1_for_DOS_(in_black_and_white).jpg)
+[![SuperMemo 1.0 for DOS (../.gitbook/assets/800px-SuperMemo_1_for_DOS_(in_black_and_white).jpg)](https://supermemo.guru/images/thumb/e/ea/SuperMemo_1_for_DOS_%28in_black_and_white%29.jpg/800px-SuperMemo_1_for_DOS_%28in_black_and_white%29.jpg)](https://supermemo.guru/wiki/File:SuperMemo_1_for_DOS_(in_black_and_white).jpg)
 
 > **Figure:** SuperMemo 1.0 for DOS (1987) was the first computer application of spaced repetition. It introduced Algorithm SM-2 that remains popular three decades later
 >
