--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -94,7 +94,7 @@ A graph of actual changes in the value of the two components of memory provides 
 
 记忆的两个组成成分的值的实际变化图提供了记忆状态演变的概念性可视化：
 
-[![SuperMemo: Changes in two variables of long-term memory](https://supermemo.guru/images/thumb/5/57/Memory_status.jpg/800px-Memory_status.jpg)](https://supermemo.guru/wiki/File:Memory_status.jpg)
+[![SuperMemo: Changes in two variables of long-term memory](../.gitbook/assets/800px-Memory_status.jpg)](https://supermemo.guru/wiki/File:Memory_status.jpg)
 
 > **Figure:** Changes in memory status over time for an exemplary piece of knowledge. The horizontal axis represents time spanning the entire repetition history. The top panel shows retrievability (tenth power, $R^{10}$, for easier analysis). Retrievability grid in gray is labelled by R=99%, R=98%, etc. The middle panel displays optimum intervals in navy. Repetition dates are marked by blue vertical lines and labelled in aqua. The end of the optimum interval where R crosses 90% line is marked by red vertical lines (only if intervals are longer than optimum intervals). The bottom panel visualizes stability (presented as $\ln(S)/\ln(days)$ for easier analysis). The graph shows that retrievability drops fast (exponentially) after early repetitions when stability is low, however, it only drops from 100% to 94% in long 10 years after the 7th review. All values are derived from an actual repetition history and the three component model of memory.
 >
@@ -212,7 +212,7 @@ The actual proof from my [Master's Thesis](https://supermemo.guru/wiki/Optimizat
 > 2. 记忆的可提取性反映了重复之间的时间间隔，并指示记忆痕迹在回忆过程中能在多大程度上被成功利用
 > 3. 记忆的稳定性反映了学习过程中重复的历史，并且随着突触的每一次刺激而增加。它确定最佳重复间隔的长度
 >
-> [![Hypothetical mechanism involved in the process of optimal learning](https://supermemo.guru/images/thumb/0/0e/Hypothetical_mechanism_involved_in_the_process_of_optimal_learning.jpg/426px-Hypothetical_mechanism_involved_in_the_process_of_optimal_learning.jpg)](https://supermemo.guru/wiki/File:Hypothetical_mechanism_involved_in_the_process_of_optimal_learning.jpg)
+> [![Hypothetical mechanism involved in the process of optimal learning](../.gitbook/assets/426px-Hypothetical_mechanism_involved_in_the_process_of_optimal_learning.jpg)](https://supermemo.guru/wiki/File:Hypothetical_mechanism_involved_in_the_process_of_optimal_learning.jpg)
 >
 > > **Figure:** In my Master's Thesis titled "Optimization of learning" (1990), I presented some hypothetical concepts that might underly the process of optimal learning based on spaced repetition. (A) Molecular phenomena (B) Quantitative changes in the synapse. Those ideas are a bit dated today, but the serrated curves representing memory retrievability came to be widely known in popular publications on spaced repetition. They are usually wrongly attributed to Hermann Ebbinghaus
 > >
