--- a/History of spaced repetition/02.1985 Birth of SuperMemo.md
+++ b/History of spaced repetition/02.1985 Birth of SuperMemo.md
@@ -18,7 +18,7 @@ In 1982, I paid more attention to what most students discover sooner or later: t
 
 1982 年，我更加关注大多数学生迟早会发现的东西：考试效果。我开始形成主动回忆的知识。我会把问题写在一页的左边，答案写在右边的一栏里：
 
-![](../.gitbook/assets/Polish-English_word_pairs_that_helped_formulate_SuperMemo_(Wozniak_1982).jpg)
+![](../.gitbook/assets/Polish-English_word_pairs_that_helped_formulate_SuperMemo_\(Wozniak_1982\).jpg)
 
 > **Figure:** In 1982, my learning materials were organized into columns: questions and answers, for active recall. The picture shows my Polish-English word pair database (June 1982)
 >
@@ -32,7 +32,7 @@ In the years 1982-1983, I kept expanding my "fast assimilation" knowledge in the
 
 在 1982 - 1983 年期间，我不断扩大我在生物化学和英语领域的“快速吸收”知识。我会不时地回顾我的资料页，以减少遗忘。我的记忆力提高了，但我再次碰壁只是时间问题。我拥有的页面越多，复习的频率越低，记忆遗漏的问题就越明显。下面是一个重复历史的例子：
 
-![Intermittent learning started on June 3, 1982](../.gitbook/assets/300px-Repetition_history_notes_used_in_investigating_recall_(Wozniak_1982).jpg)
+![Intermittent learning started on June 3, 1982](../.gitbook/assets/300px-Repetition_history_notes_used_in_investigating_recall_\(Wozniak_1982\).jpg)
 
 > **Figure:** **Repetition history** is the record of review with dates and scores. In this example, 8 repetitions were executed in the years 1982-1985. The page of 38 word-pairs registered 0-7 memory lapses per repetition. This intermittent review was replaced with the SuperMemo method in 1985
 >
@@ -42,7 +42,7 @@ Between June 1982 and December 1984, my English-Polish word-pairs notebook grew 
 
 1982 年 6 月到 1984 年 12 月之间，我的英语 - 波兰语单词对笔记本增加到 79 页，看起来像这样：
 
-![](../.gitbook/assets/550px-English-Polish_word_pairs_(Wozniak_1982).jpg)
+![](../.gitbook/assets/550px-English-Polish_word_pairs_\(Wozniak_1982\).jpg)
 
 > **Figure:** A typical page from my English-Polish words notebook started in June 1982. Word pairs would be listed on the left. Review history would be recorded on the right. Recall errors would be marked as dots in the middle
 >
